Fixed implicit +1 step in for loops